--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,6 +1,7 @@
 eclipse.preferences.version=1
 encoding//estacionamientos/admin.py=utf-8
 encoding//estacionamientos/forms.py=utf-8
+encoding//estacionamientos/migrations/0011_merge.py=utf-8
 encoding//estacionamientos/models.py=utf-8
 encoding//estacionamientos/tests.py=utf-8
 encoding//estacionamientos/urls.py=utf-8
